修改pom依赖，新增志愿者报名接口

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,3 +30,9 @@ mybatis:
 logging:
   level:
     com.volunteer.mapper: debug
+
+mybatis-plus:
+  global-config:
+    db-config:
+      logic-delete-value: 1 # ??????(??? 1)
+      logic-not-delete-value: 0 # ??????(??? 0)
