--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,5 +34,7 @@ logging:
 mybatis-plus:
   global-config:
     db-config:
+      logic-delete-field: deleted
       logic-delete-value: 1 # ??????(??? 1)
       logic-not-delete-value: 0 # ??????(??? 0)
+
