--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  #??
+  #端口
   port: 8080
 
 spring:
-  #?????
+  #数据源
   datasource:
     url: jdbc:mysql://47.101.206.1:3306/hg_volunteer?useUnicode=true&characterEncoding=utf-8
     username: admin
@@ -32,7 +32,19 @@ mybatis-plus:
   global-config:
     db-config:
       logic-delete-field: deleted
-      logic-delete-value: 1 # ??????(??? 1)
-      logic-not-delete-value: 0 # ??????(??? 0)
+      logic-delete-value: 1 # 逻辑删除，已删除
+      logic-not-delete-value: 0 # 逻辑删除，未删除
+
+# ===================================================================
+# 分布式文件系统FDFS配置
+# ===================================================================
+fdfs:
+  so-timeout: 1501
+  connect-timeout: 601
+  thumb-image:             #缩略图生成参数159x150
+    width: 150
+    height: 150
+  tracker-list:            #TrackerList参数,支持多个
+    - 47.101.206.1:22122
 
 
