引入腾讯云SDK，初步实现发送验证码功能

--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,12 @@
             <artifactId>fastdfs-client</artifactId>
             <version>1.27.2</version>
         </dependency>
+        <!--  腾讯云SDK -->
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java</artifactId>
+            <version>3.1.270</version>
+        </dependency>
     </dependencies>
 
 
