--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,6 +34,10 @@ mybatis-plus:
       logic-delete-field: deleted
       logic-delete-value: 1 # 逻辑删除，已删除
       logic-not-delete-value: 0 # 逻辑删除，未删除
+  configuration:
+    #下划线转驼峰配置
+    map-underscore-to-camel-case: true
+
 
 # ===================================================================
 # 分布式文件系统FDFS配置
@@ -54,8 +58,11 @@ vm:
 
 #小程序的配置信息
 mini-program:
-  appId: wx7fb72aa57c11f260
-  appSecret: ffd2811e2bb4deb45e1fbca8a897d870
+#  appId: wx7fb72aa57c11f260
+#  appSecret: ffd2811e2bb4deb45e1fbca8a897d870
+  appId: wx93c0ea617266b2e7
+  appSecret: e670ef525dfc30ffa54f610bbafd3409
+
 
 #腾讯云的配置信息
 tencent-cloud:
@@ -69,3 +76,6 @@ tencent-cloud:
   templateId: 1248012
   #验证码的有效期,单位是分钟
   expires: 3
+
+##用户AES加密密钥
+AES-secret: jfaojfaofjafeoiafnehtt222vava
