--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
     </parent>
 
     <dependencies>
-
         <!-- mybatis -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
@@ -48,6 +47,11 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.21</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
             <version>1.1.21</version>
         </dependency>
         <!-- redis -->
@@ -147,6 +151,4 @@
             <version>2.2.0</version>
         </dependency>
     </dependencies>
-
-
 </project>
