--- a/src/main/resources/application-lfyDev.yml
+++ b/src/main/resources/application-lfyDev.yml
@@ -163,3 +163,7 @@ xxl:
 #        max: 100
 #    ### 调度中心国际化配置 [必填]： 默认为 "zh_CN"/中文简体, 可选范围为 "zh_CN"/中文简体, "zh_TC"/中文繁体 and "en"/英文；
 #    i18n: zh_CN
+
+##爱心雨伞默认数据
+umbrella:
+  umbrellaBorrowRecordPageSize: 20 #爱心雨伞借阅记录默认返回条数
