--- a/src/main/resources/application-lfyDev.yml
+++ b/src/main/resources/application-lfyDev.yml
@@ -41,6 +41,9 @@ spring:
           starttls:
             enable: true
             required: true
+  servlet:
+    multipart:
+      max-file-size: 10MB #设置文件上传大小上线为10M 默认1M
 mail:
   fromMail:
     addr: fengyuan-liang
@@ -81,7 +84,7 @@ oss:
   accessKeySecret: S3Ubgng97xUNrt0xSw2cQUEpIVPxtL
   bucketName: lfy-hg-volunteer
   bucketDomain: https://lfy-hg-volunteer.oss-cn-beijing.aliyuncs.com/
-
+  myOssUrl: https://www.volunteer.fengxianhub.top/ #绑定oss的域名，让图片可以直接访问到
 #云服务器的配置信息
 vm:
   host: 47.101.206.1
@@ -169,3 +172,4 @@ xxl:
 umbrella:
   umbrellaBorrowRecordPageSize: 20 #爱心雨伞借阅记录默认返回条数
   defaultBorrowDuration: 24 #默认用户能够借取雨伞的时间为24小时
+  defaultUnlockWaitTime: 10 #爱心雨伞锁机默认开锁时间 单位秒
