--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
     </parent>
 
     <dependencies>
-        <!-- mybatis -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -143,7 +142,7 @@
             <artifactId>spring-rabbit-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- OOS -->
+        <!-- OSS -->
         <dependency>
             <groupId>com.aliyun.oss</groupId>
             <artifactId>aliyun-sdk-oss</artifactId>
@@ -153,7 +152,7 @@
         <dependency>
             <groupId>com.xuxueli</groupId>
             <artifactId>xxl-job-core</artifactId>
-            <version>2.2.0</version>
+            <version>2.3.0</version>
         </dependency>
         <!-- websocket坐标依赖-->
         <dependency>
