--- a/pom.xml
+++ b/pom.xml
@@ -115,11 +115,11 @@
             <scope>runtime</scope>
         </dependency>
         <!-- FastDFS -->
-        <dependency>
-            <groupId>com.github.tobato</groupId>
-            <artifactId>fastdfs-client</artifactId>
-            <version>1.27.2</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.tobato</groupId>-->
+<!--            <artifactId>fastdfs-client</artifactId>-->
+<!--            <version>1.27.2</version>-->
+<!--        </dependency>-->
         <!--  腾讯云SDK -->
         <dependency>
             <groupId>com.tencentcloudapi</groupId>
@@ -174,6 +174,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.11</version>
         </dependency>
     </dependencies>
     <!--打包插件-->
