Revert "修改了与锁机进行通信的协议，将传输数据格式改为json，对部分接口进行修改"
This reverts commit bb14d3a89c641452c1f80f1c00c90704269f804b.

--- a/application-LinuxProd.yml
+++ b/application-LinuxProd.yml
@@ -155,7 +155,7 @@ task:
 xxl:
   job:
     admin:
-      addresses: https://volunteer.fengxianhub.top:8081/xxl-job-admin #部署的调度中心的url
+      addresses: http://127.0.0.1:8081/xxl-job-admin #部署的调度中心的url
     executor:
       appname: xxl-job-volunteer-executor #执行器的名字
       ip:
